Add Brasileirao OBS overlay
